// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`desktop when showGetInTouch is false renders the expected classes 1`] = `
.c0 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
}

.c1 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c2 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

<div>
  <footer
    class="footer c0"
  >
    <div
      class="c1"
    >
      <div
        class="text__c-txt___Uzv-G range__c-range___1aYaS "
      >
        <label
          class="c2 text__c-txt__label___3wMPZ "
          data-garden-container-id="field"
          data-garden-container-version="1.1.3"
          data-garden-id="forms.text_label"
          data-garden-version="7.0.2"
          for="garden-field-container-0--input"
          id="garden-field-container-0--label"
        >
          Type your question here...
        </label>
        <textarea
          aria-describedby="garden-field-container-0--hint"
          aria-invalid="false"
          aria-labelledby="garden-field-container-0--label"
          class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
          data-garden-id="forms.textarea"
          data-garden-version="7.0.2"
          data-testid="message-field"
          id="garden-field-container-0--input"
          name="answerBotInputValue"
          placeholder="Type your question here..."
          rows="3"
        >
          desktop message
        </textarea>
      </div>
    </div>
    <div
      class="logoDesktop"
    >
      <a
        class="icon"
        data-testid="Icon--zendesk"
        href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
        tabindex="-1"
        target="_blank"
      >
        <svg
          realfilename="widget-icon_zendesk.svg"
          title="zendesk"
        />
      </a>
    </div>
  </footer>
</div>
`;

exports[`desktop when showGetInTouch is true renders the expected classes 1`] = `
.c0 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
}

.c1 {
  background-color: transparent;
  color: #1F73B7;
  border-color: #1F73B7;
  font-size: 1.0714285714285714rem;
  padding-right: 1.7142857142857142rem;
  padding-left: 1.7142857142857142rem;
  min-width: 0;
  padding: 0.5714285714285714rem 1rem;
  border-radius: 1.1428571428571428rem;
  border-width: 0.07142857142857142rem;
  white-space: normal;
  line-height: 1.3;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  color: #FFFFFF;
  background-color: #1F73B7;
  border-color: #1F73B7;
}

.c2 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c3 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

<div>
  <footer
    class="footer c0"
  >
    <div
      class="slideAppear"
      data-testid="slide-appear-container"
      role="presentation"
      style="opacity: 0; bottom: -10px;"
    >
      <div
        class="quickReplyContainer"
      >
        <button
          class="getInTouch c1"
          data-testid="pill-button"
        >
          Get in touch
        </button>
      </div>
    </div>
    <div
      class="c2"
    >
      <div
        class="text__c-txt___Uzv-G range__c-range___1aYaS "
      >
        <label
          class="c3 text__c-txt__label___3wMPZ "
          data-garden-container-id="field"
          data-garden-container-version="1.1.3"
          data-garden-id="forms.text_label"
          data-garden-version="7.0.2"
          for="garden-field-container-2--input"
          id="garden-field-container-2--label"
        >
          Type your question here...
        </label>
        <textarea
          aria-describedby="garden-field-container-2--hint"
          aria-invalid="false"
          aria-labelledby="garden-field-container-2--label"
          class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
          data-garden-id="forms.textarea"
          data-garden-version="7.0.2"
          data-testid="message-field"
          id="garden-field-container-2--input"
          name="answerBotInputValue"
          placeholder="Type your question here..."
          rows="3"
        >
          desktop message
        </textarea>
      </div>
    </div>
    <div
      class="logoDesktop"
    >
      <a
        class="icon"
        data-testid="Icon--zendesk"
        href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
        tabindex="-1"
        target="_blank"
      >
        <svg
          realfilename="widget-icon_zendesk.svg"
          title="zendesk"
        />
      </a>
    </div>
  </footer>
</div>
`;

exports[`mobile when showGetInTouch is false renders the expected classes 1`] = `
.c0 {
  padding: 0;
}

.c1 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c2 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

<div>
  <footer
    class="footer c0"
  >
    <div
      class="logoMobile"
    >
      <a
        class="icon"
        data-testid="Icon--zendesk"
        href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
        tabindex="-1"
        target="_blank"
      >
        <svg
          realfilename="widget-icon_zendesk.svg"
          title="zendesk"
        />
      </a>
    </div>
    <div
      class="containerMobile"
    >
      <div
        class="inputContainerMobile"
      >
        <div
          class="c1"
        >
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="c2 text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-3--input"
              id="garden-field-container-3--label"
            >
              Type your question here...
            </label>
            <textarea
              aria-describedby="garden-field-container-3--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-3--label"
              class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
              data-garden-id="forms.textarea"
              data-garden-version="7.0.2"
              data-testid="message-field"
              id="garden-field-container-3--input"
              name="answerBotInputValue"
              placeholder="Type your question here..."
              rows="1"
            >
              mobile message
            </textarea>
          </div>
        </div>
      </div>
      <button
        aria-label="Send"
        class="button iconSendAnswerBotMobile button iconSendAnswerBotMobile index__c-btn--icon___1Yl4x index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--pill___QYWDJ index__c-btn--lg___33IF1 "
        data-garden-container-id="keyboardfocus"
        data-garden-container-version="0.2.6"
        data-garden-id="buttons.icon_button"
        data-garden-version="7.0.2"
        tabindex="0"
        type="button"
      >
        <span
          class="container Icon--sendChat"
          data-testid="Icon--sendChat"
          type="Icon--sendChat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_sendChat.svg"
          />
        </span>
      </button>
    </div>
  </footer>
</div>
`;

exports[`mobile when showGetInTouch is true renders the expected classes 1`] = `
.c0 {
  padding: 0;
}

.c1 {
  background-color: transparent;
  color: #1F73B7;
  border-color: #1F73B7;
  font-size: 1.0714285714285714rem;
  padding-right: 1.7142857142857142rem;
  padding-left: 1.7142857142857142rem;
  min-width: 0;
  padding: 0.5714285714285714rem 1rem;
  border-radius: 1.1428571428571428rem;
  border-width: 0.07142857142857142rem;
  white-space: normal;
  line-height: 1.3;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  color: #FFFFFF;
  background-color: #1F73B7;
  border-color: #1F73B7;
}

.c2 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c3 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

<div>
  <footer
    class="footer c0"
  >
    <div
      class="slideAppear slideAppearMobile"
      data-testid="slide-appear-container"
      role="presentation"
      style="opacity: 0; bottom: -10px;"
    >
      <div
        class="quickReplyContainer"
      >
        <button
          class="getInTouch c1"
          data-testid="pill-button"
        >
          Get in touch
        </button>
      </div>
    </div>
    <div
      class="logoMobile"
    >
      <a
        class="icon"
        data-testid="Icon--zendesk"
        href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
        tabindex="-1"
        target="_blank"
      >
        <svg
          realfilename="widget-icon_zendesk.svg"
          title="zendesk"
        />
      </a>
    </div>
    <div
      class="containerMobile"
    >
      <div
        class="inputContainerMobile"
      >
        <div
          class="c2"
        >
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="c3 text__c-txt__label___3wMPZ "
              data-garden-container-id="field"
              data-garden-container-version="1.1.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.0.2"
              for="garden-field-container-5--input"
              id="garden-field-container-5--label"
            >
              Type your question here...
            </label>
            <textarea
              aria-describedby="garden-field-container-5--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-5--label"
              class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
              data-garden-id="forms.textarea"
              data-garden-version="7.0.2"
              data-testid="message-field"
              id="garden-field-container-5--input"
              name="answerBotInputValue"
              placeholder="Type your question here..."
              rows="1"
            >
              mobile message
            </textarea>
          </div>
        </div>
      </div>
      <button
        aria-label="Send"
        class="button iconSendAnswerBotMobile button iconSendAnswerBotMobile index__c-btn--icon___1Yl4x index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--pill___QYWDJ index__c-btn--lg___33IF1 "
        data-garden-container-id="keyboardfocus"
        data-garden-container-version="0.2.6"
        data-garden-id="buttons.icon_button"
        data-garden-version="7.0.2"
        tabindex="0"
        type="button"
      >
        <span
          class="container Icon--sendChat"
          data-testid="Icon--sendChat"
          type="Icon--sendChat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_sendChat.svg"
          />
        </span>
      </button>
    </div>
  </footer>
</div>
`;
